--- a/app.plist
+++ b/app.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/janker007/appdownload/master/zfjbym.ipa</string>
+					<string>https://github.com/janker007/appdownload/raw/master/lbshopapp.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>zfjbym.ipa</string>
+				<string>lbshopapp.ipa</string>
 			</dict>
 		</dict>
 	</array>
